packages/css/src/components/button.css
.m-btn {
  --btn-color-default: var(--color-default);
  --btn-color-primary: var(--color-primary);
  --btn-color-secondary: var(--color-secondary);
  --btn-color-tertiary: var(--color-tertiary);
  --btn-text-color-default: var(--color-text);
  --btn-text-color-primary: var(--color-text-light);
  --btn-text-color-secondary: var(--color-text-light);
  --btn-text-color-tertiary: var(--color-text);
  --btn-outline-text-color-default: color(from var(--btn-color-default) srgb calc(r * 0.5) calc(g * 0.5) calc(b * 0.5));
  --btn-outline-text-color-primary: color(from var(--btn-color-primary) srgb calc(r * 0.5) calc(g * 0.5) calc(b * 0.5));
  --btn-outline-text-color-secondary: color(from var(--btn-color-secondary) srgb calc(r * 0.5) calc(g * 0.5) calc(b * 0.5));
  --btn-outline-text-color-tertiary: color(from var(--btn-color-tertiary) srgb calc(r * 0.55) calc(g * 0.55) calc(b * 0.55));
  --btn-darker-brightness: 90%;
  --btn-lighter-brightness: 110%;
  --btn-disabled-opacity: 0.65;
  --btn-padding-x: var(--spacing-6);
  --btn-padding-y: var(--spacing-2);
  --btn-box-shadow: var(--shadow-sm);
  --btn-border-radius: var(--radius-md);
  --btn-rounded-border-radius: var(--radius-full);
  --btn-border-width: var(--border-width);
  --btn-active-transform: translateY(1px);
  --btn-transition-duration: 0.2s;

  display: inline-flex;
  white-space: nowrap;
  /* NOTE: Non-critical property, so this is acceptable */
  /* stylelint-disable-next-line plugin/use-baseline */
  user-select: none;
  border: var(--btn-border-width) solid transparent;
  padding: var(--btn-padding-y) var(--btn-padding-x);
  border-radius: var(--btn-border-radius);
  cursor: pointer;
  box-shadow: var(--btn-box-shadow);
  color: var(--btn-text-color-default);
  background-color: var(--btn-color-default);

  &:has(svg),
  &:has(.icon) {
    gap: var(--spacing-1);
    align-items: center;
    justify-content: center;

    .icon,
    svg {
      /* NOTE: Ignoring design tokens for icon size adjustment */
      /* stylelint-disable-next-line declaration-property-value-allowed-list */
      line-height: 1em;
      width: 1em;
      height: 1em;
      flex-shrink: 0;
    }
  }

  &:disabled {
    opacity: var(--btn-disabled-opacity);
    cursor: not-allowed;
    transform: initial;
  }

  &:active {
    transform: var(--btn-active-transform);
    box-shadow: initial;
  }

  &:hover,
  &:focus,
  &:focus-visible {
    text-decoration: none;
    filter: brightness(var(--btn-lighter-brightness));

    &:disabled {
      filter: none;
    }
  }


  &.--primary {
    color: var(--btn-text-color-primary);
    background-color: var(--btn-color-primary);
  }

  &.--secondary {
    color: var(--btn-text-color-secondary);
    background-color: var(--btn-color-secondary);
  }

  &.--tertiary {
    color: var(--btn-text-color-tertiary);
    background-color: var(--btn-color-tertiary);
  }

  &.--outline {
    background-color: transparent;
    border: 2px solid transparent;
    color: var(--btn-outline-text-color-default);
    border-color: var(--btn-color-default);

    &:hover {
      color: var(--btn-text-color-default);
      background-color: var(--btn-color-default);
    }

    &.--primary {
      color: var(--btn-outline-text-color-primary);
      border-color: var(--btn-color-primary);

      &:hover {
        color: var(--btn-text-color-primary);
        background-color: var(--btn-color-primary);
      }
    }

    &.--secondary {
      color: var(--btn-outline-text-color-secondary);
      border-color: var(--btn-color-secondary);

      &:hover {
        color: var(--btn-text-color-secondary);
        background-color: var(--btn-color-secondary);
      }
    }

    &.--tertiary {
      color: var(--btn-outline-text-color-tertiary);
      border-color: var(--btn-color-tertiary);

      &:hover {
        color: var(--btn-text-color-tertiary);
        background-color: var(--btn-color-tertiary);
      }
    }
  }

  &.--block {
    display: block;
    width: 100%;
  }

  &.--rounded {
    border-radius: var(--btn-rounded-border-radius);
  }

  &.--icon-only {
    line-height: var(--line-height-none);
    padding: var(--btn-padding-y);
  }

  &.--transition {
    transition: filter var(--btn-transition-duration) ease;

    &.--outline {
      transition: background-color var(--btn-transition-duration) ease,
        color var(--btn-transition-duration) ease;
    }
  }
}

